Bug 52452 - [bug] client simple-egl displays incorrect mouse cursor after move
Summary: [bug] client simple-egl displays incorrect mouse cursor after move
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-24 16:46 UTC by Brian Lovin
Modified: 2012-10-30 01:03 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
See notes, in actual observation pointer style cursor is not present. (17.30 KB, image/png)
2012-07-24 16:46 UTC, Brian Lovin
Details

Description Brian Lovin 2012-07-24 16:46:22 UTC
Created attachment 64624 [details]
See notes, in actual observation pointer style cursor is not present.

System Environment:
--------------------------
Distro: Ubuntu 12.04
Arch: x86_64
glproto master ec1eec4355ee4a6c5134f2178192f10b6d28a87a
mesa master 82fc813ca870c4002502e098519bead7bec1a7e8
wayland master eadb68ec32df8ee54ccba175d19adcdedfaa5015
pixman master 56321eff65832791252c7c324930d14c44d4d5f7
weston master 2327d1f490a5362e6b6199ca68b14d11e2f13408
drm master ebd7904877d08525beb5039e4ea2f5b6c0a7c23f
cairo master 21e3f2e9034b64131075d82a4e34868dc72f2249
libX11 master 8042f88ace33573f9d0dfaa21ed54ac7cef266d5
macros master 0890e4003aacfa7113ab3f4e3ad7c5636f8e922a
libxkbcommon master fe4f990902c7cd8f395b9f3be14dc6e8cad7cae9
dri2proto master 4eeacce4c4a300b938b7e3fb78a8e443c491780b
kbproto master 391a1f6de6315fc0196d407d800597488315ccc

Detailed Description:
-----------------------------
Run simple-egl, press down the mouse click and drag the application around the screen.
Release the mouse button and observe that the mouse cursor is still a "grabby hand" for moving around the window.
Mouse cursor stays as "grabby hand" until the cursor is moved off the window and back on.
Even just clicking the window results in the "grabby hand" cursor, which can be quite confusing.

The example screenshot is inaccurate, but kind of shows the issue. In actual observation there is no "pointer" style cursor over the "grabby hand" cursor.


Steps to Reproduce:
----------------------------
1. start weston under X11 or DRM mode
2. ./simple-egl
3. Mouse over the simple-egl application, click down and move around the screen.
4. Release mouse button and observe "grabby hand" cursor remaining.
5. Move mouse cursor off application and back, observe the correct cursor.
Comment 1 Kristian Høgsberg 2012-10-29 21:40:52 UTC
commit 191e0eee7757f6c027ccb9c49b0977633a5c5600
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Mon Oct 29 17:41:46 2012 -0400

    simple-egl: Add a default cursor
    
    If clients don't set a cursor, they get whatever the last cursor was
    before the pointer entered their window.  That's a little confusing, so
    set a pointer on enter to avoid that.  The down-side is that simple EGL
    isn't very simple anymore.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=52452


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.